--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 
  <h1 style="text-align:center;">404 Error!</h1>
 
-<p style="text-align:center;">This page can't be found because of the following reasons: The page you are looking for may be deleted, you did a typo, or it never existed. </p>
+<p style="text-align:center;">This page can't be found because of the following reasons: the page you are looking for may be deleted, you did a typo, or it never existed. </p>
 
 </body>
 </html>
