--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>404</title>
+<title>404 Error!</title>
 </head>
 <body>
  
@@ -9,8 +9,9 @@
 
  <h1 style="text-align:center;">404 Error!</h1>
 
-<p style="text-align:center;">This page can't be found because of the following reasons: the page you are looking for may be deleted, you did a typo, or it never existed. </p>
+<p style="text-align:center;">The page you are looking for may be deleted, you did a typo, or it never existed. </p>
+
+  <a href="https://aneeshlingala.github.io"><p style="text-align:center">Homepage</a>
 
 </body>
 </html>
-
