--- a/404.html
+++ b/404.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>404 Error!</title>
+<title>404</title>
 </head>
 <body>
  
  <body style="background-color:CornflowerBlue;">
 
- <h1 style="text-align:center;">404 Error!</h1>
+ <h1 style="text-align:center;">404</h1>
 
 <p style="text-align:center;">The page you are looking for may be deleted, you did a typo, or it never existed. </p>
 
