--- a/404.html
+++ b/404.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>404 error!</title>
+
+<body style="background-color:CornflowerBlue;">
+
+
+<link href='https://fonts.googleapis.com/css?family=Yanone Kaffeesatz' rel='stylesheet'>
+<style>
+body {
+    font-family: 'Yanone Kaffeesatz';font-size: 22px;text-align: center;
+}
+}
+
+ 
+
+</style>
 </head>
 <body>
+
+
+<h1>404 error!</h1>
+<p>The page you are looking for may be deleted, you did a typo, or it never existed.</p>
  
- <body style="background-color:CornflowerBlue;">
-
- <h1 style="text-align:center;">404 error!</h1>
-
-<p style="text-align:center;">The page you are looking for may be deleted, you did a typo, or it never existed. </p>
-
-  <a href="https://aneeshlingala.github.io"><p style="text-align:center">Homepage</a>
+ <a href="https://aneeshlingala.github.io"><p style="text-align:center">Homepage</a> 
 
 </body>
 </html>
