--- a/index.html
+++ b/index.html
@@ -1,22 +1,31 @@
-
 <!DOCTYPE html>
 <html>
-<body style="background-color:CornflowerBlue;">
-​
-​<title>Homepage</title>
-​
+<head>
+<link href='https://fonts.googleapis.com/css?family=Yanone Kaffeesatz' rel='stylesheet'>
+<style>
+body {
+    font-family: 'Yanone Kaffeesatz';font-size: 22px;text-align: center;
+}
+
+ <title>Homepage<title>
+
+body {background-color:CornflowerBlue;} 
+
+
+<link rel="icon" href=/favicon.ico" type="image/x-icon">
+
 </style>
 </head>
 <body>
 
-<link rel="icon" href=/favicon.ico" type="image/x-icon">
-​
-<h1 style="text-align:center;">Welcome to my website! 🌎 </h1>
-<p style="text-align:center;">My name is Aneesh and I'm 9 years old! I make YouTube videos. </p>
-​
+<h1>Welcome to my website! 🌎 </h1>
+<p>My name is Aneesh and I'm 9 years old! I make YouTube videos.</p>
+
 <a href="https://www.youtube.com/channel/UCoUPRze-YPOcFuf47SeLS2Q"><p style="text-align:center">My YouTube Channel 📺 </a>
 ​
 <a href="mailto: aneesh.sharma.lingala@gmail.com"><p style="text-align:center">My Email Address 📧 </a>
 </body>
+
+
+</body>
 </html>
-​
