--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@ body {
 }
 
  <title>Homepage<title>
-
-body {background-color:CornflowerBlue;} 
-
+<body style="background-color:CornflowerBlue;">
 
 <link rel="icon" href=/favicon.ico" type="image/x-icon">
 
