--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
+
+
 <!DOCTYPE html>
 <html>
 <head>
+
  
-    
+
+
 <link href='https://fonts.googleapis.com/css?family=Yanone Kaffeesatz' rel='stylesheet'>
 <style>
 body {
@@ -11,6 +15,12 @@ body {
 
  <title>Homepage<title>
 
+
+
+ 
+</style>
+
+<body style="background-color:powderblue;">
 
 <link rel="icon" href=/favicon.ico" type="image/x-icon">
 
@@ -29,3 +39,4 @@ body {
 
 </body>
 </html>
+
