--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
 <html>
 <head>
 
- <title>Homepage<title>
-
 <link href='https://fonts.googleapis.com/css?family=Yanone Kaffeesatz' rel='stylesheet'>
 <style>
 body {
     font-family: 'Yanone Kaffeesatz';font-size: 22px;text-align: center;
 }
 
- 
+ <head>
+ <title>Homepage<title>
 
 
 
