--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@ body {
 
 <body style="background-color:powderblue;">
 
+<h1>Homepage</h1> 
+ 
 <link rel="icon" href=/favicon.ico" type="image/x-icon">
 
 </style>
