--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@ body {
 </head>
 <body>
 
-<body style="background-color:powderblue;">
+<body style="background-color:CornflowerBlue;">
 
 <h1>404 error!</h1>
 <p>The page you are looking for may be deleted, you did a typo, or it never existed.</p>
