--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
  
 </style>
 
-<body style="background-color:powderblue;">
+<body style="background-color:CornflowerBlue;">
 
 <h1>Homepage</h1> 
  
