--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-
+<title>404 error</title>
 
 <link href='https://fonts.googleapis.com/css?family=Yanone Kaffeesatz' rel='stylesheet'>
 <style>
@@ -12,7 +12,7 @@ body {
 }
 
     
-<title>404 error!</title>    
+<title>404 error</title>    
  
 
 </style>
