--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+<title>Homepage</title>
  
 <link href='https://fonts.googleapis.com/css?family=Yanone Kaffeesatz' rel='stylesheet'>
 <style>
@@ -12,7 +14,7 @@ body {
 
  
 
-<title>Homepage</title>
+<title>Home</title>
 
 
  
