--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body {
 <body>
                                                     
 
-<h1> Welcome to my website! 🌎 </h1>
+<h1> Welcome to my website! 🌐 </h1>
 <p>My name is Aneesh and I'm 9 years old! I make YouTube videos.</p>
 
 <a href="https://www.youtube.com/channel/UCoUPRze-YPOcFuf47SeLS2Q"><p style="text-align:center">My YouTube Channel 📺 </a>
