--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-<!DOCTYPE html>
-<meta http-equiv="refresh" content="0; url=https://aneeshlingala.w3spaces.com" />
+<p style="text-align: center;">Redirect to my new website</p>
+<p style="text-align: center;">I am not hosting on Github anymore, my new website's url is: aneeshlingala.w3spaces.com or you can just click on the redirect hyperlink.</p>
+<div class="text-center" style="text-align: center;"><a href="aneeshlingala.w3spaces.com"><span style="color: #0000ff;">Redirect</span></a></div>
