--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
-<p style="text-align: center;">Redirect to my new website</p>
-<p style="text-align: center;">I am not hosting on Github anymore, my new website's url is: aneeshlingala.w3spaces.com or you can just click on the redirect hyperlink.</p>
-<div class="text-center" style="text-align: center;"><a href="https://aneeshlingala.w3spaces.com"><span style="color: #0000ff;">Redirect</span></a></div>
+<h2 style="text-align: center;"><span style="color: #0000ff;">Hi! <img src="https://htmlg.com/tinymce4911/plugins/emoticons/img/smiley-smile.gif" alt="smile" /></span></h2>
+<p></p>
+<h3 style="text-align: center;"><span style="color: #ff6600;">About me</span></h3>
+<p><span style="color: #ff6600;"></span></p>
+<ul>
+<li><span style="color: #ff6600;">I am 10 years old.</span></li>
+<li><span style="color: #ff6600;">I like to code.</span></li>
+<li><span style="color: #ff6600;">I have a YouTube Channel.</span><span style="color: #ff6600;"></span></li>
+</ul>
+<p><span style="color: #ff6600;"></span></p>
+<h3 style="text-align: center;"><span style="color: #ff6600;">Contact Me</span></h3>
+<p><span style="color: #ff6600;"></span></p>
+<p style="text-align: center;"><span style="color: #ff6600;"><a href="mailto:aneeshlingala@hotmail.com" target="_blank" rel="noopener" title="My Email">My Email</a></span></p>
+<p style="text-align: center;"><span style="color: #ff6600;"><a href="github.com/aneeshlingala" target="_blank" rel="noopener" title="My GitHub profile">My GitHub profile</a></span></p>
+<p style="text-align: center;"><span style="color: #ff6600;"></span></p>
