--- a/index.html
+++ b/index.html
@@ -13,3 +13,4 @@
 <p style="text-align: center;"><span style="color: #ff6600;"><a href="mailto:aneeshlingala@hotmail.com" target="_blank" rel="noopener" title="My Email">My Email</a></span></p>
 <p style="text-align: center;"><span style="color: #ff6600;"><a href="github.com/aneeshlingala" target="_blank" rel="noopener" title="My GitHub profile">My GitHub profile</a></span></p>
 <p style="text-align: center;"><span style="color: #ff6600;"></span></p>
+<link rel="shortcut icon" href="https://lh3.googleusercontent.com/ogw/ADea4I592PvoUWdO48K7Rbf53y__fuOgzy67T6jdmYHkVQ=s32-c-mo" type="image/x-icon">  
