--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <p></p>
 <h3 style="text-align: center;"><span style="color: #ff6600;">About me</span></h3>
 <p><span style="color: #ff6600;"></span></p>
-<ul>
-<li><span style="color: #ff6600;">I am 10 years old.</span></li>
-<li><span style="color: #ff6600;">I like to code.</span></li>
-<li><span style="color: #ff6600;">I have a YouTube Channel.</span><span style="color: #ff6600;"></span></li>
-</ul>
+<p style="text-align: center;"><span style="color: #ff6600;">1. I am 10 years old.</span></p>
+<p style="text-align: center;"><span style="color: #ff6600;">2. I like to code.</span></p>
+<p style="text-align: center;"><span style="color: #ff6600;">3. I have a YouTube Channel.</span><span style="color: #ff6600;"></span></p>
 <p><span style="color: #ff6600;"></span></p>
 <h3 style="text-align: center;"><span style="color: #ff6600;">Contact Me</span></h3>
 <p><span style="color: #ff6600;"></span></p>
 <p style="text-align: center;"><span style="color: #ff6600;"><a href="mailto:aneeshlingala@hotmail.com" target="_blank" rel="noopener" title="My Email">My Email</a></span></p>
 <p style="text-align: center;"><span style="color: #ff6600;"><a href="github.com/aneeshlingala" target="_blank" rel="noopener" title="My GitHub profile">My GitHub profile</a></span></p>
 <p style="text-align: center;"><span style="color: #ff6600;"></span></p>
-<link rel="shortcut icon" href="https://lh3.googleusercontent.com/ogw/ADea4I592PvoUWdO48K7Rbf53y__fuOgzy67T6jdmYHkVQ=s32-c-mo" type="image/x-icon">  
+<p></p>
+<link rel="shortcut icon" href="https://lh3.googleusercontent.com/ogw/ADea4I592PvoUWdO48K7Rbf53y__fuOgzy67T6jdmYHkVQ=s32-c-mo">
