--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <h3 style="text-align: center;"><span style="color: #ff6600;">Contact Me</span></h3>
 <p style="text-align: center;"><span style="color: #ff6600;"><a href="https://www.youtube.com/channel/UCoUPRze-YPOcFuf47SeLS2Q" target="_blank" rel="noopener" title="My YouTube channel">My YouTube channel</a></span></p>
 <p style="text-align: center;"><span style="color: #ff6600;"><a href="mailto:aneeshlingala@hotmail.com" target="_blank" rel="noopener" title="My Email">My Email</a></span></p>
-<p style="text-align: center;"><span style="color: #ff6600;"><a href="github.com/aneeshlingala" target="_blank" rel="noopener" title="My GitHub profile">My GitHub profile</a></span></p>
+<p style="text-align: center;"><span style="color: #ff6600;"><a href="https://github.com/aneeshlingala" target="_blank" rel="noopener" title="My GitHub profile">My GitHub profile</a></span></p>
 <p style="text-align: center;"><span style="color: #ff6600;"></span></p>
 <p></p>
-<p><
 <link rel="shortcut icon" href="https://lh3.googleusercontent.com/ogw/ADea4I592PvoUWdO48K7Rbf53y__fuOgzy67T6jdmYHkVQ=s32-c-mo">
