--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h2 style="text-align: center;"><span style="color: #0000ff;">Hi! <img src="https://htmlg.com/tinymce4911/plugins/emoticons/img/smiley-smile.gif" alt="smile" /></span></h2>
-<p></p>
+<h4 style="text-align: center;"><span style="color: #ff6600;">This is my small space on the internet.</span></h4>
 <h3 style="text-align: center;"><span style="color: #ff6600;">About me</span></h3>
 <p><span style="color: #ff6600;"></span></p>
 <p style="text-align: center;"><span style="color: #ff6600;">1. I am 10 years old.</span></p>
