--- a/index.html
+++ b/index.html
@@ -12,4 +12,5 @@
 <p style="text-align: center;"><span style="color: #ff6600;"><a href="https://github.com/aneeshlingala" target="_blank" rel="noopener" title="My GitHub profile">My GitHub profile</a></span></p>
 <p style="text-align: center;"><span style="color: #ff6600;"></span></p>
 <p></p>
-<link rel="shortcut icon" href="https://lh3.googleusercontent.com/ogw/ADea4I592PvoUWdO48K7Rbf53y__fuOgzy67T6jdmYHkVQ=s32-c-mo">
+<link rel="icon" href="favicon.ico" type="image/x-icon"/>
+
