--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <p style="text-align: center;"><span style="color: #ff6600;"><a href="mailto:aneeshlingala@hotmail.com" target="_blank" rel="noopener" title="My Email">My Email</a></span></p>
 <p style="text-align: center;"><span style="color: #ff6600;"><a href="https://github.com/aneeshlingala" target="_blank" rel="noopener" title="My GitHub profile">My GitHub profile</a></span></p>
 <p style="text-align: center;"><span style="color: #ff6600;"></span></p>
+<p style="text-align: center;"><span style="color: #ff6600;">Last edited on: 14th February 2022</span><span style="color: #ff6600;"></span></p>
 <p></p>
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 
