--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 <p style="text-align: center;"><span style="color: #ff6600;"><a href="https://github.com/aneeshlingala" target="_blank" rel="noopener" title="My GitHub profile">My GitHub profile</a></span></p>
 <p style="text-align: center;"><span style="color: #ff6600;"></span></p>
 <p style="text-align: center;"><span style="color: #ff6600;">Last edited on: 14th February 2022</span><span style="color: #ff6600;"></span></p>
-<body style="background-color:powderblue;">
+<style>
+body {
+  background-image: url('websiteBG.jpg');
+}
+</style>
 <p></p>
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 
