--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 <style>
 body {
   background-image: url('websiteBG.jpg');
+  background-repeat: no-repeat;
 }
 </style>
+
 <p></p>
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 
