--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <p style="text-align: center;"><span style="color: #ff6600;">Last edited on: 14th February 2022</span><span style="color: #ff6600;"></span></p>
 <style>
 body {
-  background-image: url('websiteBG.jpg');
+  background-image: url('bg.jpg');
   background-repeat: no-repeat;
 }
 </style>
