--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <h2 style="text-align: center;"><span style="color: #0000ff;">Hi! <img src="https://htmlg.com/tinymce4911/plugins/emoticons/img/smiley-smile.gif" alt="smile" /></span></h2>
-<h4 style="text-align: center;"><span style="color: #ff6600;">This is my small space on the internet.</span></h4>
-<h3 style="text-align: center;"><span style="color: #ff6600;">About me</span></h3>
-<p><span style="color: #ff6600;"></span></p>
-<p style="text-align: center;"><span style="color: #ff6600;">1. I am 10 years old.</span></p>
-<p style="text-align: center;"><span style="color: #ff6600;">2. I like to code.</span></p>
-<p style="text-align: center;"><span style="color: #ff6600;">3. I have a YouTube Channel.</span><span style="color: #ff6600;"></span></p>
-<p><span style="color: #ff6600;"></span></p>
-<h3 style="text-align: center;"><span style="color: #ff6600;">Contact Me</span></h3>
+<h4 style="text-align: center;"><span style="color: #ffffff;">This is my small space on the internet.</span></h4>
+<h3 style="text-align: center;"><span style="color: #ffffff;">About me</span></h3>
+<p><span style="color: #ffffff;"></span></p>
+<p style="text-align: center;"><span style="color: #ffffff;">1. I am 10 years old.</span></p>
+<p style="text-align: center;"><span style="color: #ffffff;">2. I like to code.</span></p>
+<p style="text-align: center;"><span style="color: #ffffff;">3. I have a YouTube Channel.</span></p>
+<p><span style="color: #ffffff;"></span></p>
+<h3 style="text-align: center;"><span style="color: #ffffff;">Contact Me</span></h3>
 <p style="text-align: center;"><span style="color: #ff6600;"><a href="https://www.youtube.com/channel/UCoUPRze-YPOcFuf47SeLS2Q" target="_blank" rel="noopener" title="My YouTube channel">My YouTube channel</a></span></p>
 <p style="text-align: center;"><span style="color: #ff6600;"><a href="mailto:aneeshlingala@hotmail.com" target="_blank" rel="noopener" title="My Email">My Email</a></span></p>
 <p style="text-align: center;"><span style="color: #ff6600;"><a href="https://github.com/aneeshlingala" target="_blank" rel="noopener" title="My GitHub profile">My GitHub profile</a></span></p>
 <p style="text-align: center;"><span style="color: #ff6600;"></span></p>
-<p style="text-align: center;"><span style="color: #ff6600;">Last edited on: 14th February 2022</span><span style="color: #ff6600;"></span></p>
+<p style="text-align: center;"><span style="color: #ffffff;">Last edited on: 14th February 2022</span><span style="color: #ff6600;"></span></p>
 <style>
 body {
   background-image: url('bg.jpg');
