--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <h4 style="text-align: center;"><span style="color: #000000;">This is my small space on the internet.</span></h4>
 <h3 style="text-align: center;"><span style="color: #000000;">About me</span></h3>
 <p><span style="color: #ffffff;"></span></p>
-<p style="text-align: center;"><span style="color: #000000;">1. I am 10 years old.</span></p>
-<p style="text-align: center;"><span style="color: #000000;">2. I like to code.</span></p>
-<p style="text-align: center;"><span style="color: #000000;">3. I have a YouTube Channel.</span></p>
+<p style="text-align: center;"><span style="color: #000000;">1. My name is Aneesh.</span></p>
+<p style="text-align: center;"><span style="color: #000000;">2. I am 10 years old.</span></p>
+<p style="text-align: center;"><span style="color: #000000;">3. I like to code.</span></p>
+<p style="text-align: center;"><span style="color: #000000;">4. I have a YouTube Channel.</span></p>
 <p><span style="color: #ffffff;"></span></p>
 <h3 style="text-align: center;"><span style="color: #000000;">Contact Me</span></h3>
 <p style="text-align: center;"><span style="color: #000000;"><a href="https://www.youtube.com/channel/UCoUPRze-YPOcFuf47SeLS2Q" target="_blank" rel="noopener" title="My YouTube channel">My YouTube channel</a></span></p>
