--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <p style="text-align: center;"><span style="color: #ff6600;"><a href="https://github.com/aneeshlingala" target="_blank" rel="noopener" title="My GitHub profile">My GitHub profile</a></span></p>
 <p style="text-align: center;"><span style="color: #ff6600;"></span></p>
 <p style="text-align: center;"><span style="color: #000000;">Last edited on: 14th February 2022</span><span style="color: #ff6600;"></span></p>
+<title> Aneesh's Website <title>
 <style>
 body {
   background-image: url('sitebg.jpg');
