--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
  
 <style>
 body {
-  background-image: url('sitebg.jpg');
+  background-image: url('/images/sitebg.jpg');
   background-repeat: no-repeat;
 }
 </style>
 
 <p></p>
-<link rel="icon" href="favicon.ico" type="image/x-icon"/>
+<link rel="icon" href="/images/favicon.ico" type="image/x-icon"/>
 
