--- a/index.html
+++ b/index.html
@@ -24,5 +24,5 @@ body {
 </style>
 
 <p></p>
-<link rel="icon" href="/images/favicon.ico" type="image/x-icon"/>
+<link rel="icon" href="favicon.ico" type="image/x-icon"/>
 
