--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <p></p>
+<title>Aneesh's Website</title>
 <p><marquee class="GeneratedMarquee" direction="right" scrollamount="7" behavior="scroll">Welcome to my website! <img src="https://htmlg.com/tinymce4911/plugins/emoticons/img/smiley-smile.gif" alt="smile" /></marquee></p>
 <h4 style="text-align: center;"><span style="color: #000000;">This is my small space on the internet.</span></h4>
 <h3 style="text-align: center;"><span style="color: #000000;">About me</span></h3>
