--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
  
 <style>
 body {
-  background-image: url('/images/sitebg.jpg');
+  background-image: url('sitebg.jpg');
   background-repeat: no-repeat;
 }
 </style>
