--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
 
 <style>
 body {
-  background-image: url('/images/sitebg.jpg');
+  background-image: url('sitebg.jpg');
   background-repeat: no-repeat;
 }
 </style>
