--- a/404.html
+++ b/404.html
@@ -1,3 +1,4 @@
+<title>404 error!</title>
 <h1 style="text-align: center;"><span style="color: #000000;">404 error!</span></h1>
 <p><span style="color: #000000;"></span></p>
 <h4 style="text-align: center;"><span style="color: #000000;">The page does not exist, not available or you did a typo.</span></h4>
