--- a/useful-software-and-websites.html
+++ b/useful-software-and-websites.html
@@ -9,3 +9,15 @@
 <h4 style="text-align: center;">4. <a href="github.com" target="_blank" rel="noopener" title="Github">Github</a></h4>
 <p></p>
 <p style="text-align: center;"></p>
+
+<style>
+body {
+  background-image: url('sitebg.jpg');
+  background-repeat: no-repeat;
+}
+</style>
+
+<p></p>
+<link rel="icon" href="favicon.ico" type="image/x-icon"/>
+
+
