--- a/useful-software-and-websites.html
+++ b/useful-software-and-websites.html
@@ -2,11 +2,11 @@
 <p style="text-align: center;"></p>
 <h4 style="text-align: center;">1. <a href="https://www.diskpart.com/" target="_blank" rel="noopener" title="https://www.diskpart.com/">AOMEI Partition Assistant</a></h4>
 <p></p>
-<h4 style="text-align: center;">2. <a href="htmlg.com/html-editor/" target="_blank" rel="noopener" title="HTMLg Wysiwyg editor">HTMLg Wysiwyg editor</a></h4>
+<h4 style="text-align: center;">2. <a href="https://htmlg.com/html-editor/" target="_blank" rel="noopener" title="HTMLg Wysiwyg editor">HTMLg Wysiwyg editor</a></h4>
 <h4 style="text-align: center;"></h4>
-<h4 style="text-align: center;">3. <a href="rufus.ie" title="Rufus" target="_blank" rel="noopener">Rufus</a></h4>
+<h4 style="text-align: center;">3. <a href="https://rufus.ie" title="Rufus" target="_blank" rel="noopener">Rufus</a></h4>
 <p></p>
-<h4 style="text-align: center;">4. <a href="github.com" target="_blank" rel="noopener" title="Github">Github</a></h4>
+<h4 style="text-align: center;">4. <a href="https://github.com" target="_blank" rel="noopener" title="Github">Github</a></h4>
 <p></p>
 <p style="text-align: center;"></p>
 
