--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <p></p>
-<title>Aneesh's Website</title>
 <p><marquee class="GeneratedMarquee" direction="right" scrollamount="7" behavior="scroll">Welcome to my website! <img src="https://htmlg.com/tinymce4911/plugins/emoticons/img/smiley-smile.gif" alt="smile" /></marquee></p>
 <h4 style="text-align: center;"><span style="color: #000000;">This is my small space on the internet.</span></h4>
 <h3 style="text-align: center;"><span style="color: #000000;">About me</span></h3>
@@ -13,9 +12,9 @@
 <p style="text-align: center;"><span style="color: #000000;"><a href="https://www.youtube.com/channel/UCoUPRze-YPOcFuf47SeLS2Q" target="_blank" rel="noopener" title="My YouTube channel">My YouTube channel</a></span></p>
 <p style="text-align: center;"><span style="color: #000000;"><a href="mailto:aneeshlingala@hotmail.com" target="_blank" rel="noopener" title="My Email">My Email</a></span></p>
 <p style="text-align: center;"><span style="color: #ff6600;"><a href="https://github.com/aneeshlingala" target="_blank" rel="noopener" title="My GitHub profile">My GitHub profile</a></span></p>
-<p style="text-align: center;"><span style="color: #ff6600;"></span></p>
+<h3 style="text-align: center;"><a href="https://aneeshlingala.github.io/useful-software-and-websites.html" target="_blank" rel="noopener" title="Useful software and websites list">Useful software and websites list</a></h3>
+<p></p>
 <p style="text-align: center;"><span style="color: #000000;">Last edited on: 15th February 2022</span><span style="color: #ff6600;"></span></p>
-
  
 <style>
 body {
