--- a/index.html
+++ b/index.html
@@ -1,21 +1,18 @@
-<p></p>
-<title>Aneesh's Website</title>
-<p><marquee class="GeneratedMarquee" direction="right" scrollamount="7" behavior="scroll">Welcome to my website! <img src="https://htmlg.com/tinymce4911/plugins/emoticons/img/smiley-smile.gif" alt="smile" /></marquee></p>
-<h4 style="text-align: center;"><span style="color: #000000;">This is my small space on the internet.</span></h4>
-<h3 style="text-align: center;"><span style="color: #000000;">About me</span></h3>
-<p><span style="color: #ffffff;"></span></p>
-<p style="text-align: center;"><span style="color: #000000;">1. My name is Aneesh.</span></p>
-<p style="text-align: center;"><span style="color: #000000;">2. I am 10 years old.</span></p>
+<h2 style="text-align: center;">Welcome to my website!&nbsp;</h2>
+<h4 style="text-align: center;"><span style="color: #000000;">This is my small space on the internet. 🌐&nbsp;</span></h4>
+<h3 style="text-align: center;"><span style="color: #000000;">About me 👦</span><span style="color: #ffffff;"></span></h3>
+<p style="text-align: center;"><span style="color: #000000;">1. My name is Aneesh.&nbsp;</span></p>
+<p style="text-align: center;"><span style="color: #000000;">2. I am&nbsp;10 years old.</span></p>
 <p style="text-align: center;"><span style="color: #000000;">3. I like to code.</span></p>
 <p style="text-align: center;"><span style="color: #000000;">4. I have a YouTube Channel.</span></p>
 <p><span style="color: #ffffff;"></span></p>
-<h3 style="text-align: center;"><span style="color: #000000;">Contact Me</span></h3>
-<p style="text-align: center;"><span style="color: #000000;"><a href="https://www.youtube.com/channel/UCoUPRze-YPOcFuf47SeLS2Q" target="_blank" rel="noopener" title="My YouTube channel">My YouTube channel</a></span></p>
-<p style="text-align: center;"><span style="color: #000000;"><a href="mailto:aneeshlingala@hotmail.com" target="_blank" rel="noopener" title="My Email">My Email</a></span></p>
-<p style="text-align: center;"><span style="color: #ff6600;"><a href="https://github.com/aneeshlingala" target="_blank" rel="noopener" title="My GitHub profile">My GitHub profile</a></span></p>
-<h3 style="text-align: center;"><a href="https://aneeshlingala.github.io/useful-software-and-websites.html" target="_blank" rel="noopener" title="Useful software and websites list">Useful software and websites list</a></h3>
+<h3 style="text-align: center;"><span style="color: #000000;">Contact Me 📧</span></h3>
+<p style="text-align: center;"><a href="https://www.youtube.com/channel/UCoUPRze-YPOcFuf47SeLS2Q" target="_blank" rel="noopener" title="Youtube"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" width="48" height="48" alt="" /></a></p>
+<p style="text-align: center;"><a href="mailto:aneeshlingala@hotmail.com" target="_blank" rel="noopener" title="Email"><img src="https://img.icons8.com/ios/452/email-open.png" width="48" height="48" alt="" /></a></p>
+<p style="text-align: center;"><img src="https://i.ibb.co/y0tTJ1T/Git-Hub-Mark-Light-64px.png" alt="Github" width="48" height="48" /></p>
+<h3 style="text-align: center;"><a href="https://aneeshlingala.github.io/useful-software-and-websites.html" target="_blank" rel="noopener" title="Useful software and websites list">Useful software and websites list</a>&nbsp;🧑&zwj;💻</h3>
 <p></p>
-<p style="text-align: center;"><span style="color: #000000;">Last edited on: 15th February 2022</span><span style="color: #ff6600;"></span></p>
+<p style="text-align: center;"><span style="color: #000000;">Last edited on: 15th February 2022</span><span style="color: #ff6600;"></span></p>>
  
 <style>
 body {
