--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <title>404 error!</title>
-<h1 style="text-align: center;"><span style="color: #000000;">404 error!</span></h1>
+<h1 style="text-align: center;"><span style="color: #000000;">404 error! ☹️</span></h1>
 <p><span style="color: #000000;"></span></p>
 <h4 style="text-align: center;"><span style="color: #000000;">The page does not exist, not available or you did a typo.</span></h4>
 <h4 style="text-align: center;"><span style="color: #000000;"><a href="aneeshlingala.github.io" title="Back to home">Back to home</a></span></h4>
