--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <h3 style="text-align: center;"><span style="color: #000000;">Contact Me 📧</span></h3>
 <p style="text-align: center;"><a href="https://www.youtube.com/channel/UCoUPRze-YPOcFuf47SeLS2Q" target="_blank" rel="noopener" title="Youtube"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" width="48" height="48" alt="" /></a></p>
 <p style="text-align: center;"><a href="mailto:aneeshlingala@hotmail.com" target="_blank" rel="noopener" title="Email"><img src="https://img.icons8.com/ios/452/email-open.png" width="48" height="48" alt="" /></a></p>
-<p style="text-align: center;"><img src="https://i.ibb.co/y0tTJ1T/Git-Hub-Mark-Light-64px.png" alt="Github" width="48" height="48" /></p>
+<p style="text-align: center;"><a href="https://github.com/aneeshlingala" target="_blank" rel="noopener" title="Github"><img src="https://i.ibb.co/y0tTJ1T/Git-Hub-Mark-Light-64px.png" alt="Github" width="48" height="48" /></a></p>
 <h3 style="text-align: center;"><a href="https://aneeshlingala.github.io/useful-software-and-websites.html" target="_blank" rel="noopener" title="Useful software and websites list">Useful software and websites list</a>&nbsp;🧑&zwj;💻</h3>
 <p></p>
-<p style="text-align: center;"><span style="color: #000000;">Last edited on: 15th February 2022</span><span style="color: #ff6600;"></span></p>>
+<p style="text-align: center;"><span style="color: #000000;">Last edited on: 15th February 2022</span><span style="color: #ff6600;"></span></p>
+<p>&gt;</p>
  
 <style>
 body {
