--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h2 style="text-align: center;">Welcome to my website!&nbsp;</h2>
 <h4 style="text-align: center;"><span style="color: #000000;">This is my small space on the internet. 🌐&nbsp;</span></h4>
-<h3 style="text-align: center;"><span style="color: #000000;">About me 👦</span><span style="color: #ffffff;"></span></h3>
+<h3 style="text-align: center;"><span style="color: #000000;">About me 🧒</span><span style="color: #ffffff;"></span></h3>
 <p style="text-align: center;"><span style="color: #000000;">1. My name is Aneesh.&nbsp;</span></p>
 <p style="text-align: center;"><span style="color: #000000;">2. I am&nbsp;10 years old.</span></p>
 <p style="text-align: center;"><span style="color: #000000;">3. I like to code.</span></p>
