--- a/useful-software-and-websites.html
+++ b/useful-software-and-websites.html
@@ -1,5 +1,5 @@
 <title>Useful software and websites</title>
-<h1 style="text-align: center;">Useful software 🧑‍💻 and websites 🌐</h1>
+<h1 style="text-align: center;">Useful software and websites 🧑‍💻🌐</h1>
 <p style="text-align: center;"></p>
 <h4 style="text-align: center;">1. <a href="https://www.diskpart.com/" target="_blank" rel="noopener" title="https://www.diskpart.com/">AOMEI Partition Assistant</a></h4>
 <p></p>
