--- a/404.html
+++ b/404.html
@@ -1,9 +1,9 @@
-<title>404 error!</title>
 <h1 style="text-align: center;"><span style="color: #000000;">404 error! ☹️</span></h1>
 <p><span style="color: #000000;"></span></p>
 <h4 style="text-align: center;"><span style="color: #000000;">The page does not exist, not available or you did a typo.</span></h4>
-<h4 style="text-align: center;"><span style="color: #000000;"><a href="aneeshlingala.github.io" title="Back to home">Back to home</a></span></h4>
-<h4 style="text-align: center;"><span style="color: #000000;"></span></h4>
+<h4 style="text-align: center;"><span style="color: #000000;">Click on the home icon below to go back to home.</span></h4>
+<h4 style="text-align: center;"><a href="https://aneeshlingala.github.io"><img src="https://img.icons8.com/color/344/home.png" alt="back to home" width="48" height="48" /></a></h4>
+<h4 style="text-align: center;"><span style="color: #000000;"></span></h4>>
 
 <style>
 body {
