--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<title> Aneesh's Website </title>
 <h2 style="text-align: center;">Welcome to my website!&nbsp;</h2>
 <h4 style="text-align: center;"><span style="color: #000000;">This is my small space on the internet. 🌐&nbsp;</span></h4>
 <h3 style="text-align: center;"><span style="color: #000000;">About me 🧒</span><span style="color: #ffffff;"></span></h3>
