--- a/404.html
+++ b/404.html
@@ -1,9 +1,11 @@
-<h1 style="text-align: center;"><span style="color: #000000;">404 error! ☹️</span></h1>
+<title> 404 error! </title>
+<h1 style="text-align: center;"><img src="https://i.ibb.co/SftWBxH/net-gifmaker-unscreen.gif" width="349" height="197" alt="" style="color: #000000;" /></h1>
 <p><span style="color: #000000;"></span></p>
-<h4 style="text-align: center;"><span style="color: #000000;">The page does not exist, not available or you did a typo.</span></h4>
+<h4 style="text-align: center;"><span style="color: #000000;">404 error! ☹️. The page does not exist, not available or you did a typo.</span></h4>
 <h4 style="text-align: center;"><span style="color: #000000;">Click on the home icon below to go back to home.</span></h4>
 <h4 style="text-align: center;"><a href="https://aneeshlingala.github.io"><img src="https://img.icons8.com/color/344/home.png" alt="back to home" width="48" height="48" /></a></h4>
-<h4 style="text-align: center;"><span style="color: #000000;"></span></h4>>
+<h4 style="text-align: center;"><span style="color: #000000;"></span></h4>
+<p>&gt;</p>
 
 <style>
 body {
