--- a/404.html
+++ b/404.html
@@ -9,10 +9,14 @@
 
 <style>
 body {
-  background-image: url('sitebg.jpg');
+  background-image: url('https://github.com/aneeshlingala/aneeshlingala.github.io/blob/main/sitebg.jpg?raw=true');
   background-repeat: no-repeat;
 }
 </style>
+
+<link rel="icon" href="favicon.ico" type="image/x-icon"/>
+
+
 
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 
