--- a/useful-software-and-websites.html
+++ b/useful-software-and-websites.html
@@ -7,7 +7,7 @@
 <h4 style="text-align: center;"></h4>
 <h4 style="text-align: center;">3. <a href="https://rufus.ie" title="Rufus" target="_blank" rel="noopener">Rufus</a></h4>
 <p></p>
-<h4 style="text-align: center;">4. <a href="linuxmint.com" target="_blank" rel="noopener" title="Linux mint">Linux Mint</a></h4>
+<h4 style="text-align: center;">4. <a href="https://linuxmint.com" target="_blank" rel="noopener" title="Linux mint">Linux Mint</a></h4>
 <p></p>
 <h4 style="text-align: center;">5. <a href="https://drive.google.com/file/d/13JY-UwiokMdHWztXq66ZNW-GGFnyWfJN/view?usp=sharing" target="_blank" rel="noopener" title="Ultimate reboot tool">Ultimate reboot tool</a></h4>
 <p></p>
