--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 <p style="text-align: center;"><span style="color: #000000;">4. I have a YouTube Channel.</span></p>
 <p><span style="color: #ffffff;"></span></p>
 <h3 style="text-align: center;"><span style="color: #000000;">Contact Me 📧</span></h3>
-<p style="text-align: center;"><a href="https://www.youtube.com/channel/UCoUPRze-YPOcFuf47SeLS2Q" target="_blank" rel="noopener" title="Youtube"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" width="48" height="48" alt="" /></a></p>
-<p style="text-align: center;"><a href="mailto:aneeshlingala@hotmail.com" target="_blank" rel="noopener"><img src="https://cdn-icons.flaticon.com/png/512/2669/premium/2669570.png?token=exp=1644917137~hmac=a0e3f0772e41d13ea8c439a744361084" width="48" height="48" alt="" style="color: #000000;" /></a></p>
-<p style="text-align: center;"><a href="https://github.com/aneeshlingala" target="_blank" rel="noopener" title="Github"><img src="https://i.ibb.co/y0tTJ1T/Git-Hub-Mark-Light-64px.png" alt="Github" width="48" height="48" /></a></p>
+<p style="text-align: center;"><a href="https://www.youtube.com/channel/UCoUPRze-YPOcFuf47SeLS2Q" target="_blank" rel="noopener" title="YouTube"><img src="/icons/youtube.png" alt="" /><img src="/icons/youtube.png" alt="Youtube" width="48" height="48" /></a><img src="/icons/youtube" alt="" /></p>
+<p style="text-align: center;"><img src="/icons/email" alt="" /><a href="mailto:aneeshlingala@hotmail.com"><img src="/icons/email.png" alt="Email" width="48" height="48" /></a></p>
+<p style="text-align: center;"><a href="https://github.com/aneeshlingala" target="_blank" rel="noopener" title="Github"><img src="/icons/github.png" alt="Github" width="48" height="48" /></a></p>
 <h3 style="text-align: center;"><a href="https://aneeshlingala.github.io/useful-software-and-websites.html" target="_blank" rel="noopener" title="Useful software and websites">Useful software and websites list</a>&nbsp;🧑&zwj;💻🌐</h3>
 <p></p>
 <p style="text-align: center;"><span style="color: #000000;">Last edited on: 15th February 2022</span><span style="color: #ff6600;"></span></p>
-<p>&gt;</p>
+ 
+
 <style>
 body {
   background-image: url('sitebg.jpg');
