--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <p><span style="color: #000000;"></span></p>
 <h4 style="text-align: center;"><span style="color: #000000;">404 error! ☹️. The page does not exist, not available or you did a typo. 🚫</span></h4>
 <h4 style="text-align: center;"><span style="color: #000000;">Click on the home icon below to go back to home. 🏠</span></h4>
-<h4 style="text-align: center;"><a href="https://aneeshlingala.github.io"><img src="https://img.icons8.com/color/344/home.png" alt="back to home" width="48" height="48" /></a></h4>
+<h4 style="text-align: center;"><a href="https://aneeshlingala.github.io"><img src="/icons/home.png" alt="back to home" width="48" height="48" /></a></h4>
 <h4 style="text-align: center;"><span style="color: #000000;"></span></h4>
 <p>&gt;</p>
 
