--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 <p><span style="color: #ffffff;"></span></p>
 <h3 style="text-align: center;"><span style="color: #000000;">Contact Me 📧</span></h3>
 <p style="text-align: center;"><a href="https://www.youtube.com/channel/UCoUPRze-YPOcFuf47SeLS2Q" target="_blank" rel="noopener" title="YouTube"><img src="/icons/youtube" alt="" /><img src="/icons/youtube.png" alt="Youtube" width="48" height="48" /></a><img src="/icons/youtube" alt="" /></p>
-<p style="text-align: center;"><img src="/icons/email" alt="" /><img src="/icons/email.png" alt="Email" width="48" height="48" /></p>
+<p style="text-align: center;"><img src="/icons/email" alt="" /><a href="mailto:aneeshlingala@hotmail.com" target="_blank" rel="noopener" title="Email"><img src="/icons/email.png" alt="Email" width="48" height="48" /></a></p>
 <p style="text-align: center;"><a href="https://github.com/aneeshlingala" target="_blank" rel="noopener" title="Github"><img src="/icons/github.png" alt="Github" width="48" height="48" /></a></p>
 <h3 style="text-align: center;"><a href="https://aneeshlingala.github.io/useful-software-and-websites.html" target="_blank" rel="noopener" title="Useful software and websites">Useful software and websites list</a>&nbsp;🧑&zwj;💻🌐</h3>
 <p></p>
 <p style="text-align: center;"><span style="color: #000000;">Last edited on: 15th February 2022</span><span style="color: #ff6600;"></span></p>
- 
 
 <style>
 body {
