--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <p style="text-align: center;"><img src="/icons/email" alt="" /><a href="mailto:aneeshlingala@hotmail.com" target="_blank" rel="noopener" title="Email"><img src="/icons/email.png" alt="Email" width="48" height="48" /></a></p>
 <p style="text-align: center;"><a href="https://github.com/aneeshlingala" target="_blank" rel="noopener" title="Github"><img src="/icons/github.png" alt="Github" width="48" height="48" /></a></p>
 <h3 style="text-align: center;"><a href="https://aneeshlingala.github.io/useful-software-and-websites.html" target="_blank" rel="noopener" title="Useful software and websites">Useful software and websites list</a>&nbsp;🧑&zwj;💻🌐</h3>
+<h3 style="text-align: center;"><a href="https://aneeshlingala.github.io/linuxdistrosiused.html" target="_blank" rel="noopener" title="Linux Distros i used">Linux Distros I used&nbsp;</a></h3>
 <p></p>
 <p style="text-align: center;"><span style="color: #000000;">Last edited on: 17th February 2022</span><span style="color: #ff6600;"></span></p>
 
