--- a/linuxdistrosiused.html
+++ b/linuxdistrosiused.html
@@ -1,5 +1,5 @@
 <title>Linux Distros I Used</title>
-<h2 style="text-align: center;">Linux distros I used (with iso links)</h2>
+<h2 style="text-align: center;">Linux distros I used</h2>
 <h3 style="text-align: center;">Linux mint</h3>
 <h3 style="text-align: center;">Lubuntu</h3>
 <h3 style="text-align: center;">Ubuntu</h3>
