--- a/linuxdistrosiused.html
+++ b/linuxdistrosiused.html
@@ -1,4 +1,4 @@
-<title>Linux Distros I Used</title>
+<title>Linux Distros I used</title>
 <h2 style="text-align: center;">Linux distros I used 🧑‍💻🐧</h2>
 <h3 style="text-align: center;">Linux mint</h3>
 <h3 style="text-align: center;">Lubuntu</h3>
