--- a/linuxdistrosiused.html
+++ b/linuxdistrosiused.html
@@ -1,5 +1,4 @@
-<title>Linux Distros I used</title>
-<h2 style="text-align: center;">Linux distros I used 🧑‍💻🐧</h2>
+<h2 style="text-align: center;">Linux distros I used 🧑&zwj;💻🐧</h2>
 <h3 style="text-align: center;">Linux mint</h3>
 <h3 style="text-align: center;">Lubuntu</h3>
 <h3 style="text-align: center;">Ubuntu</h3>
@@ -20,6 +19,7 @@
 <h3 style="text-align: center;">Chrome OS</h3>
 <h3 style="text-align: center;">Android x86</h3>
 <h3 style="text-align: center;">Wow! This is a long list, these are a list of the Linux Distros I used. I currently use Lubuntu Linux.</h3>
+<h3 style="text-align: center;"><a href="https://aneeshlingala.github.io" target="_blank" rel="noopener" title="Back to home">Back to home</a></h3>
 <h3 style="text-align: center;"></h3>
 
 <style>
