--- a/linuxdistrosiused.html
+++ b/linuxdistrosiused.html
@@ -18,7 +18,8 @@
 <h3 style="text-align: center;">Ubuntu Unity</h3>
 <h3 style="text-align: center;">Chrome OS</h3>
 <h3 style="text-align: center;">Android x86</h3>
-<h3 style="text-align: center;">Wow! This is a long list, these are a list of the Linux Distros I used. I currently use Lubuntu Linux.</h3>
+<h3 style="text-align: center;">Peppermint OS Linux</h3>
+<h3 style="text-align: center;">Wow! This is a long list, these are a list of the Linux Distros I used. I currently use Peppermint OS Linux.</h3>
 <h3 style="text-align: center;"><a href="https://aneeshlingala.github.io" target="_blank" rel="noopener" title="Back to home">Back to home</a></h3>
 <h3 style="text-align: center;"></h3>
 
