--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
 <p style="text-align: center;"><a href="https://github.com/aneeshlingala" target="_blank" rel="noopener" title="Github"><img src="/icons/github.png" alt="Github" width="48" height="48" /></a></p>
 <h3 style="text-align: center;"><a href="https://aneeshlingala.github.io/useful-software-and-websites.html" target="_blank" rel="noopener" title="Useful software and websites">Useful software and websites list</a>&nbsp;🧑&zwj;💻🌐</h3>
 <h3 style="text-align: center;"><a href="https://aneeshlingala.github.io/linuxdistrosiused.html" target="_blank" rel="noopener" title="Linux Distros i used 🧑&zwj;💻🐧">Linux Distros I used 🐧🧑&zwj;💻</a></h3>
-<h3 style="text-align: center;"><a href="aneeshlingala.github.io/myos.html" target="_blank" rel="noopener" title="My OS">An OS that i made in code.org 💻💿⌨🖱</a></h3>
+<h3 style="text-align: center;"><a href="https://aneeshlingala.github.io/myos.html" target="_blank" rel="noopener" title="My OS">An OS that i made in code.org 💻💿⌨🖱</a></h3>
 <p></p>
 <p style="text-align: center;"><span style="color: #000000;">Last edited on: 25th March 2022</span><span style="color: #ff6600;"></span></p>
-<style>
  
 body {
   background-image: url('sitebg.jpg');
