--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <p></p>
 <p style="text-align: center;"><span style="color: #000000;">Last edited on: 25th March 2022</span><span style="color: #ff6600;"></span></p>
  
+<style>
 body {
   background-image: url('sitebg.jpg');
   background-repeat: no-repeat;
