--- a/linuxdistrosiused.html
+++ b/linuxdistrosiused.html
@@ -20,7 +20,9 @@
 <h3 style="text-align: center;">Chrome OS</h3>
 <h3 style="text-align: center;">Android x86</h3>
 <h3 style="text-align: center;">Peppermint OS Linux</h3>
-<h3 style="text-align: center;">Wow! This is a long list, these are a list of the Linux Distros I used. I currently use Peppermint OS Linux.</h3>
+<h3 style="text-align: center;">Debian</h3>
+<h3 style="text-align: center;">Linux Mint MATE</h3>
+<h3 style="text-align: center;">Wow! This is a long list, these are a list of the Linux Distros I used. I currently use Linux Mint MATE.</h3>
 <h3 style="text-align: center;"><a href="https://aneeshlingala.github.io" target="_blank" rel="noopener" title="Back to home">Back to home</a></h3>
 <h3 style="text-align: center;"></h3>
 
