--- a/linuxdistrosiused.html
+++ b/linuxdistrosiused.html
@@ -22,7 +22,8 @@
 <h3 style="text-align: center;">Peppermint OS Linux</h3>
 <h3 style="text-align: center;">Debian</h3>
 <h3 style="text-align: center;">Linux Mint MATE</h3>
-<h3 style="text-align: center;">Wow! This is a long list, these are a list of the Linux Distros I used. I currently use Linux Mint MATE.</h3>
+<h3 style="text-align: center;">ChromeOS</h3>
+<h3 style="text-align: center;">Wow! This is a long list, these are a list of the Linux Distros I used. I currently use ChromeOS.</h3>
 <h3 style="text-align: center;"><a href="https://aneeshlingala.github.io" target="_blank" rel="noopener" title="Back to home">Back to home</a></h3>
 <h3 style="text-align: center;"></h3>
 
