--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <p style="text-align: center;"><span style="color: #000000;">4. I have a YouTube Channel.</span></p>
 <p><span style="color: #ffffff;"></span></p>
 <h3 style="text-align: center;"><span style="color: #000000;">Contact Me 📧</span></h3>
-<p style="text-align: center;"><a href="https://www.youtube.com/channel/UCoUPRze-YPOcFuf47SeLS2Q" target="_blank" rel="noopener" title="YouTube"><img  alt=""/><img src="icons/youtube.png" alt="Youtube" width="48" height="48"/></a><img  alt=""/></p>
-<p style="text-align: center;"><img  alt=""/><a href="mailto:aneeshlingala@hotmail.com" target="_blank" rel="noopener" title="Email"><img src="icons/email.png" alt="Email" width="48" height="48"/></a></p>
-<p style="text-align: center;"><a href="https://github.com/aneeshlingala" target="_blank" rel="noopener" title="Github"><img src="icons/github.png" alt="Github" width="48" height="48"/></a></p>
+<p style="text-align: center;"><a href="https://www.youtube.com/channel/UCoUPRze-YPOcFuf47SeLS2Q" target="_blank" rel="noopener" title="YouTube"><img  alt=""/><img src="/youtube.png" alt="Youtube" width="48" height="48"/></a><img  alt=""/></p>
+<p style="text-align: center;"><img  alt=""/><a href="mailto:aneeshlingala@hotmail.com" target="_blank" rel="noopener" title="Email"><img src="/email.png" alt="Email" width="48" height="48"/></a></p>
+<p style="text-align: center;"><a href="https://github.com/aneeshlingala" target="_blank" rel="noopener" title="Github"><img src="/github.png" alt="Github" width="48" height="48"/></a></p>
 <h3 style="text-align: center;"><a href="useful-software-and-websites.html" target="_blank" rel="noopener" title="Useful software and websites">Useful software and websites list</a>&nbsp;🧑&zwj;💻🌐</h3>
 <h3 style="text-align: center;"><a href="linuxdistrosiused.html" target="_blank" rel="noopener" title="Linux Distros i used 🧑‍💻🐧">Linux Distros I used 🐧🧑&zwj;💻</a></h3>
 <h3 style="text-align: center;"><a href="myos.html" target="_blank" rel="noopener" title="My OS">An OS that i made in code.org 💻💿⌨🖱</a></h3>
