--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <p style="text-align: center;"><a href="https://github.com/aneeshlingala" target="_blank" rel="noopener" title="Github"><img src="/github.png" alt="Github" width="48" height="48"/></a></p>
 <h3 style="text-align: center;"><a href="useful-software-and-websites.html" target="_blank" rel="noopener" title="Useful software and websites">Useful software and websites list</a>&nbsp;🧑&zwj;💻🌐</h3>
 <h3 style="text-align: center;"><a href="chromebookapp.html" target="_blank" rel="noopener" title="How to use your Chromebook - App">How to use your ChromeBook - App </a>&nbsp;&zwj;💻</h3>
-<h3 style="text-align: center;"><a href="https://aneeshl.blogspot.com/" target="_blank" rel="noopener" title="My Blog">Blogger</a>&nbsp;&zwj;🌐</h3>
+<h3 style="text-align: center;"><a href="https://aneeshl.blogspot.com/" target="_blank" rel="noopener" title="My Blog">My Blog</a>&nbsp;&zwj;🌐</h3>
 
 
 <p></p>
