--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Jetpack Open Graph Tags --><!-- End Jetpack Open Graph Tags -->
 <link rel="shortcut icon" type="image/jpg" href="/favicon.ico"/>
-<p><img alt="" class="wp-image-16" src="https://aneesh59731303.files.wordpress.com/2022/08/text-3.gif?w=757" style="height: 43px; width: 757px;" /></p>
+<p><img alt="" class="wp-image-16" src="/welcome.gif" style="height: 43px; width: 757px;" /></p>
 <h1>&nbsp;<img src="https://github.com/aneeshlingala/aneeshlingala.github.io/blob/main/text.gif?raw=true" alt="" /></h1>
 <p>&nbsp;</p>
 <p><img alt="" class="wp-image-12" src="https://aneesh59731303.files.wordpress.com/2022/08/socials-1.gif?w=300" style="height: 53px; width: 300px;" /></p>
