--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <p><img alt="" class="wp-image-16" src="/welcome.gif" style="height: 43px; width: 757px;" /></p>
 <h1>&nbsp;<img src="https://github.com/aneeshlingala/aneeshlingala.github.io/blob/main/text.gif?raw=true" alt="" /></h1>
 <p>&nbsp;</p>
-<p><img alt="" class="wp-image-12" src="https://aneesh59731303.files.wordpress.com/2022/08/socials-1.gif?w=300" style="height: 53px; width: 300px;" /></p>
+<p><img alt="" class="wp-image-12" src="/socials.gif" style="height: 53px; width: 300px;" /></p>
 <p>&nbsp;<a href="https://github.com/aneeshlingala">GitHub</a><br /><a href="https://www.youtube.com/channel/UCoUPRze-YPOcFuf47SeLS2Q">YouTube</a><br /><a href="mailto:aneeshlingala61@gmail.com">Email</a></p>
 <p><img alt="" class="wp-image-13" src="https://aneesh59731303.files.wordpress.com/2022/08/extra.gif?w=305" style="height: 52px; width: 305px;" /></p>
 <p><a href="https://aneeshlingala.github.io/useful-software-and-websites.html" rel="noreferrer noopener" target="_blank">Useful software and websites list</a>&nbsp;<br /><a href="https://aneeshlingala.github.io/chromebookapp.html" rel="noreferrer noopener" target="_blank">How to use your ChromeBook &ndash; App&nbsp;</a>&nbsp;&zwj;<br /><a href="https://aneeshl.blogspot.com/" rel="noreferrer noopener" target="_blank">My Blog</a>&nbsp;&zwj;</p>
