--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <p><img alt="" class="wp-image-13" src="/extras.gif" style="height: 52px; width: 305px;" /></p>
 <p><a href="https://aneeshlingala.github.io/useful-software-and-websites.html" rel="noreferrer noopener" target="_blank"> Useful software and websites list</a>&nbsp;<br /><a href="https://aneeshlingala.github.io/chromebookapp.html" rel="noreferrer noopener" target="_blank"> How to use your ChromeBook &ndash; App&nbsp;</a>&nbsp;&zwj;<br /><a href="https://aneeshl.blogspot.com/" rel="noreferrer noopener" target="_blank"> My Blog</a>&nbsp;&zwj;</p>
 <p>&nbsp;</p>
-<p><img alt="" class="wp-image-14" src="https://aneesh59731303.files.wordpress.com/2022/08/text-1.gif?w=759" style="height: 53px; width: 759px;" /></p>
+<p><img alt="" class="wp-image-14" src="/lastedited.gif" style="height: 53px; width: 759px;" /></p>
 <style>
 body {
   background-image: url('/sitebg.jpg');
