--- a/chromebookapp.html
+++ b/chromebookapp.html
@@ -3,12 +3,6 @@
 <p style="text-align: center;">This app teaches you how to use the basic functions of your ChromeBook!</p>
 <p></p>
 <p style="text-align: center;"><a href="https://github.com/aneeshlingala/aneeshlingala.github.io/raw/main/app_2176134_1677327.apk" target="_blank" rel="noopener" title="Download">Download</a></p>
-
-<style>
-body {
-  background-image: url('sitebg.jpg');
-  background-repeat: no-repeat;
-}
-</style>
 <p></p>
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+<body style="background-color:#1c87c9;">
