--- a/index.html
+++ b/index.html
@@ -13,8 +13,4 @@
         </html>
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 
-<style>
-body {
-  background-image: url('sitebg.jpg');
-  background-repeat: no-repeat;
-}
+  <body style="background-color:#0000ff;">
