--- a/chromebookapp.html
+++ b/chromebookapp.html
@@ -5,4 +5,4 @@
 <p style="text-align: center;"><a href="https://github.com/aneeshlingala/aneeshlingala.github.io/raw/main/app_2176134_1677327.apk" target="_blank" rel="noopener" title="Download">Download</a></p>
 <p></p>
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
-<body style="background-color:#1c87c9;">
+  <body style="background-color:#0000ff;">
