--- a/index.html
+++ b/index.html
@@ -13,4 +13,4 @@
         </html>
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 
-  <body style="background-color:#0000ff;">
+  <body style="background-color:#82caaf;">
