--- a/useful-software-and-websites.html
+++ b/useful-software-and-websites.html
@@ -14,6 +14,6 @@
 <h4 style="text-align: center;"><a href="/" target="_blank" rel="noopener" title="Back to home">Back to home</a></h4>
 <p></p>
 <p style="text-align: center;"></p>
-  <body style="background-color:#0000ff;">
+  <body style="background-color:#82caaf;">
 <p></p>
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
