--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <img align="left" img src="/404error.jpg" alt="404 error :(" width="512" height="512"> 
 <p><span style="color: #000000;"></span></p>
-<h4 style="text-align: center;"><span style="color: #000000;">404 error! :(. The page does not exist, not available or you did a typo.</span></h4>
+<h4 style="text-align: center;"><span style="color: #000000;">404 error! :( The page does not exist, not available or you did a typo.</span></h4>
 <h4 style="text-align: center;"><a href="aneeshlingala.github.io" target="_blank" rel="noopener" title="Back to home">Back to home</a></h4>
 <h4 style="text-align: center;"><span style="color: #000000;"></span></h4>
 <p>&gt;</p>
