--- a/404.html
+++ b/404.html
@@ -1,7 +1,5 @@
 <img align="top" img src="/404error.jpg" alt="404 error :(" width="150" height="150"> 
-<p><span style="color: #000000;"></span></p>
-<h4 style="text-align: top;"><span style="color: #000000;">404 error! :( The page does not exist, not available or you did a typo.</span></h4>
-<h4 style="text-align: middle;"><a href="aneeshlingala.github.io" target="_blank" rel="noopener" title="Back to home">Back to home</a></h4>
+<h4 style="text-align: middle;"><a href="aneeshlingala.github.io" target="_blank" rel="noopener" title="Back to home (https://www.aneeshlingala.github.io)">Back to home</a></h4>
 <h4 style="text-align: middle;"><span style="color: #000000;"></span></h4>
 <p>&gt;</p>
 
