--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <img align="top" img src="/404error.jpg" alt="404 error :(" width="150" height="150"> 
-<h4 style="text-align: middle;"><a href="aneeshlingala.github.io" target="_blank" rel="noopener" title="Back to homepage"Back to home</a></h4>
+<h4 style="text-align: middle;"><a href="aneeshlingala.github.io" target="_blank" rel="noopener" title="Back to homepage">Back to home</a></h4>
 <h4 style="text-align: middle;"><span style="color: #000000;"></span></h4>
 <p>&gt;</p>
 
