--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
             <meta charset="utf-8">
             <link rel="stylesheet" href="./css/style.css">
           </head>
-          <body><body id="ivdf"><meta charset="utf-8"/><link rel="stylesheet" href="./css/style.css"/><div id="ib81" class="gjs-row"><div id="ih72" class="gjs-cell"><div id="ijje"><i><b id="isf6"></b></i></div><div id="i2vae"><i id="i92if"><b>𝔸𝕟𝕖𝕖𝕤𝕙&#039;𝕤 𝕎𝕖𝕓𝕤𝕚𝕥𝕖 </b></i></div><div id="icpfh">𝕎𝕖𝕝𝕔𝕠𝕞𝕖 𝕥𝕠 𝕞𝕪 𝕨𝕖𝕓𝕤𝕚𝕥𝕖!
+          <body><body id="ivdf"><meta charset="utf-8"/><link rel="stylesheet" href="./css/style.css"/><div id="ib81" class="gjs-row"><div id="ih72" class="gjs-cell"><div id="ijje"><i><b id="isf6"></b></i></div><div id="i2vae"><i id="i92if"><b>𝔸𝕟𝕖𝕖𝕤𝕙&#039;𝕤 𝕎𝕖𝕓𝕤𝕚𝕥𝕖 </b></i></div><div id="icpfh">𝒲𝑒𝓁𝒸𝑜𝓂𝑒 𝓉𝑜 𝒜𝓃𝑒𝑒𝓈𝒽'𝓈 𝓈𝓂𝒶𝓁𝓁 𝓈𝓅𝒶𝒸𝑒 𝑜𝓃 𝓉𝒽𝑒 𝒾𝓃𝓉𝑒𝓇𝓃𝑒𝓉!
         <br/>______________________________________
         <br/><br/>My Socials
         <br/></div><div id="i3kg2">
