--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
 <img align="middle" img src="/404error.jpg" alt="404 error :(" width="150" height="150"> 
-<h4 style="text-align: bottom;"><a href="aneeshlingala.github.io" target="_blank" rel="noopener" title="404 error, would you like go back to homepage?">Back to home</a></h4>
+<h4 style="text-align: bottom;"><a href="aneeshlingala.github.io" target="_blank" rel="noopener" title="404 error, would you like go back to homepage?">404 error, would you like go back to homepage?</a></h4>
 <body style="background-color:#82caaf;">
 
