--- a/index.html
+++ b/index.html
@@ -14,3 +14,99 @@
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 
   <body style="background-color:#82caaf;">
+
+          <style>
+      div {
+        background-color: #82caaf;
+        color: #fff;
+        padding: 5px;
+      }
+      p {
+        -moz-animation: marquee 10s linear infinite;
+        -webkit-animation: marquee 10s linear infinite;
+        animation: marquee 10s linear infinite;
+      }
+      @-moz-keyframes marquee {
+        0% {
+          transform: translateX(100%);
+        }
+        100% {
+          transform: translateX(-100%);
+        }
+      }
+      @-webkit-keyframes marquee {
+        0% {
+          transform: translateX(100%);
+        }
+        100% {
+          transform: translateX(-100%);
+        }
+      }
+      @keyframes marquee {
+        0% {
+          -moz-transform: translateX(100%);
+          -webkit-transform: translateX(100%);
+          transform: translateX(100%)
+        }
+        100% {
+          -moz-transform: translateX(-100%);
+          -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <div>
+      <p>Linux is my favorite OS, the Linux distro that I currently use is PostMarketOS (Alpine Linux), on my ARM ChromeBook</p>
+    </div>
+  </body>
+</html>
+
+<style>
+      div {
+        background-color: #82caaf;
+        color: #fff;
+        padding: 5px;
+      }
+      p {
+        -moz-animation: marquee 10s linear infinite;
+        -webkit-animation: marquee 10s linear infinite;
+        animation: marquee 10s linear infinite;
+      }
+      @-moz-keyframes marquee {
+        0% {
+          transform: translateX(100%);
+        }
+        100% {
+          transform: translateX(-100%);
+        }
+      }
+      @-webkit-keyframes marquee {
+        0% {
+          transform: translateX(100%);
+        }
+        100% {
+          transform: translateX(-100%);
+        }
+      }
+      @keyframes marquee {
+        0% {
+          -moz-transform: translateX(100%);
+          -webkit-transform: translateX(100%);
+          transform: translateX(100%)
+        }
+        100% {
+          -moz-transform: translateX(-100%);
+          -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <div>
+      <p>Last edited on November 23rd, 2022</p>
+    </div>
+  </body>
+</html>
